fix(docs): horizontal overflow on mobile

--- a/docs/src/css/custom.css
+++ b/docs/src/css/custom.css
@@ -33,6 +33,7 @@
 
 .navbar {
   background-color: #303846;
+  height: unset;
 }
 
 .inline-block {
@@ -97,6 +98,11 @@
 
 .mt-2 {
   margin-top: 0.5rem;
+}
+
+.py-5 {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
 }
 
 .py-10 {
